--- a/src/compoundViews (views)/MultipleElementsWrappers/MultipleElements.module.css
+++ b/src/compoundViews (views)/MultipleElementsWrappers/MultipleElements.module.css
@@ -1,3 +1,8 @@
+
+.topContainer {
+    overflow-x: hidden;
+}
+
 .container {
     font-family: 'Comic Sans MS', "Arial Round", sans-serif;
 
